fix spacing in inline block in html, change max-width for child--last

--- a/03/styles/style.css
+++ b/03/styles/style.css
@@ -60,7 +60,8 @@
 }
 
 .child--last {
-    max-width: calc(40% - 10px);
+    /* max-width: calc(40% - 10px); */
+    max-width: 40%;
     margin-right: 0;
     font-style: italic;
 }
